<resources>

    <string name="app_name">Simple4Calc</string>
   <string name="one">1</string>
   <string name="two">2</string>
   <string name="three">3</string>
   <string name="four">4</string>
   <string name="five">5</string>
   <string name="six">6</string>
   <string name="seven">7</string>
   <string name="eight">8</string>
   <string name="nine">9</string>
   <string name="div">/</string>
   <string name="mul">*</string>
   <string name="add">+</string><string name="sub">-</string>
   <string name="zero">0</string>
  <string name="equal">=</string> 
  <string name="Bk">Bksp</string> 
 <string name="mod">%</string>

           <string name="CE">CE</string> 
             <string name="C">C</string> 
              <string name="addsub">+/-</string> 
              <string name="root">R</string> 
                <string name="inverse">1/x</string> 
                     <string name="decimal">.</string>
                   
                            
                                       <string name="percent">%</string>
                    
      <string name="disp"></string>   
</resources>
