<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15B5DA"
    android:orientation="vertical"
    tools:context=".Home" >
 <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/disp"
        android:id = "@+id/display"
        android:cursorVisible="false"
        android:focusable="false"
        android:clickable="false"
       android:gravity="left"
    

   />
    
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingTop="20dp" >

        <Button
            android:id="@+id/Bk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bk" />

        <Button
            android:id="@+id/ce"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
      

            android:text="@string/CE" />

        <Button
            android:id="@+id/C"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
         
            android:text="@string/C" />

        <Button
            android:id="@+id/addsub"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/addsub" />
        
                <Button
            android:id="@+id/root"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/root" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/seven"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
           
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
        

            android:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
           
            android:text="@string/nine" />

        <Button
            android:id="@+id/div"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/div" />
         <Button
            android:id="@+id/mod"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/mod" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/four"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/four" />

        <Button
            android:id="@+id/five"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/five" />

        <Button
            android:id="@+id/six"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/six" />

        <Button
            android:id="@+id/mul"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/mul" />
        
        
              <Button
            android:id="@+id/inverse"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/inverse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/one"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
          
            android:text="@string/one" />

        <Button
            android:id="@+id/two"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/two" />

        <Button
            android:id="@+id/three"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/three" />

        <Button
            android:id="@+id/sub"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/sub" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
 
            android:text="@string/zero" />

        <Button
            android:id="@+id/decimal"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/add"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/equal"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/equal" />
    </LinearLayout>

</LinearLayout>